--- a/LoginActivity/AndroidManifest.xml
+++ b/LoginActivity/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="10"
+        android:minSdkVersion="14"
         android:targetSdkVersion="17" />
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -50,6 +50,10 @@
         <activity
             android:name="com.androidlearning.twitter.activity.ComposeActivity"
             android:label="@string/title_activity_compose" >
+        </activity>
+        <activity
+            android:name="com.androidlearning.twitter.ProfileActivity"
+            android:label="@string/title_activity_profile" >
         </activity>
     </application>
 
